Были введены новые конечные точки для клиента (поиск по имени, вывод всех контрактов пользователя, вывод всех номеров телефонов) Закончена OpenAPI документация. Теперь там написано про все доступные конечные точки.
